--- a/lib/canonical/launchpad/icing/shipit.css
+++ b/lib/canonical/launchpad/icing/shipit.css
@@ -3,11 +3,13 @@
 html {
   position: relative;
   font-family: "Trebuchet MS", "DejaVu Sans Condensed", "Tahoma", sans-serif;
-  font-size: 10pt;
+  font-size: 12pt;
   color: #656565;
   background-color: #FFFFFF;
 }
 body {margin: 0; padding: 0;}
+
+div.body {padding: 0em 1em;}
 
 /* --- Error, warning, and info messages --- */
 
