--- a/lib/canonical/launchpad/templates/marketing-answers-tour.xml
+++ b/lib/canonical/launchpad/templates/marketing-answers-tour.xml
@@ -2,50 +2,70 @@
 <tour>
   <title>Answers</title>
   <screen>
-    <title>Viewing recent questions</title>
-    <summary>Overview of questions asked about a project</summary>
-    <screenshot>/+icing/answers-tour-screenshot1.png</screenshot>
-    <callout top="90" left="70">Asking a question on a project's questions
-      page automatically sends it to the project's support contacts.
-    </callout>
-    <callout top="158" left="471">Knowledgeable community members can quickly
-      find questions that need an answer.
-    </callout>
-    <callout top="70" left="464">Launchpad automatically filters the questions
-      it displays, based on the user's preferred languages.
-    </callout>
-  </screen>
-
-  <screen>
-    <title>Choosing from suggested answers</title>
-    <summary>Launchpad helps projects to build a knowledge-base</summary>
-    <screenshot>/+icing/answers-tour-screenshot2.png</screenshot>
-    <callout top="56" left="215">If similar questions have been asked before,
-      Launchpad offers them to the user before opening a new support request.
-    </callout>
-    <callout top="200" left="264">Launchpad will even suggest questions that
-      haven't yet been answered, allowing the user to describe their
-      experience.
-    </callout>
-  </screen>
-
-  <screen>
-    <title>Discussing the solution</title>
-    <summary>Community members can discuss possible solutions and request more
-      information from the original poster
+    <title>Community support</title>
+    <summary>
+      <p>Mailing lists and web forums are traditionally where free
+        software projects answer user support questions. However, it can be
+        difficult to capture that knowledge and make it available to your
+        community.
+      </p>
+      <p>Launchpad's Answer Tracker makes it easy for users to ask questions
+        and stores your community's answers in a searchable knowledge-base.
+      </p>
     </summary>
-    <screenshot>/+icing/answers-tour-screenshot3.png</screenshot>
-    <callout top="240" left="320">Following the original question, community
-      members can build a thread of discussion to find a solution.
+    <screenshot>/+icing/answers-tour-screenshot1.png</screenshot>
+    <callout top="" left="">New users can find mailing lists and forums
+      intimidating. Launchpad uses a simple guided process to take the pain
+      out of asking a support question.
     </callout>
-    <callout top="100" left="87">The problem described in this question is
-      caused by a bug. The link is visible on both this question page and the
-      bug page, to all information is available to everyone working on the
-      issue.
+    <callout top="" left="">Launchpad turns previous support requests into a
+      knowledge-base for your project. Users can help themselves by searching
+      past support questions and answers.
     </callout>
-    <callout top="168" left="78">People who are interested in the question can
-      subscribe, to receive an email each time there's an update. The relevant
-      community's support contacts will automatically receive updates.
+    <callout top="" left="">Launchpad helps your community translate your
+      software into hundreds of languages. Localised versions of your
+      application are even more useful if users can find support in their own
+      language. Launchpad lets people request help and answer support requests
+      in their own language. It also filters knowledge-base searches according
+      to each user's preferred languages.
+    </callout>
+    <callout top="" left="">Launchpad helps support teams to organise
+      themselves and uses karma to reward people for answering support
+      requests. Any individual or team can ask Launchpad to tell them when
+      there is a new support request in their language.
     </callout>
   </screen>
+
+  <screen>
+    <title>Question detail</title>
+    <summary></summary>
+    <screenshot>/+icing/answers-tour-screenshot2.png</screenshot>
+    <callout top="" left="">Many support requests need discussion before a
+      good answer is found. Launchpad helps your community track the
+      conversation and offers both web and email interfaces to people who want
+      to take part.
+    </callout>
+    <callout top="" left="">If a long conversation develops around a user
+      support request and several possible solutions are suggested, the
+      original user can highlight the answer they found most useful.
+    </callout>
+    <callout top="" left="">Sometimes, a support request arises because of a
+      software bug. Your community's support team can generate bug reports
+      from support requests. So that everyone can follow the discussion,
+      Launchpad links the original support request to the new bug report.
+    </callout>
+    <transition>
+      <p>Thank you for joining us on our tour of Launchpad. If you'd
+        like to read more about how Launchpad works, follow our
+        <a href="https://help.launchpad.net/FeatureHighlights/">detailed
+          feature tour</a>. Or you can talk to us: email
+        <a href="mailto:info@launchpad.net">info@launchpad.net</a>.
+      </p>
+      <p>To try Launchpad for yourself, sign up for your account at <a
+        href="https://launchpad.net/+login">https://launchpad.net/+login</a>
+      </p>
+    </transition>
+  </screen>
+
+
 </tour>
