--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -447,70 +447,46 @@ ul#menuroot>li.selected>a {
     color: #000000;
 }
 
-/*- Underneath the global header and location bar is a help panel. -*/
-
-#help_panel {
-  visibility: hidden; /* global.js reveals it if JavaScript is available */
-}
-#help_panel.open,
-#help_panel.closed {
+/* Under the location bar is a Help tab that expands when clicked. */
+#help-panel {
+  background: #cff;
+  clear: both;
   position: absolute;
-  float: left;
   top: 47px;
-  left: 0px;
-  width: 350px;
+  left: 0;
+  width: 300px;
   z-index: 100;
 }
-#help_panel.closed {
-  left: -318px !important;
+
+#help-panel h2 {
+  background: #fff url(help_ttl_closed.gif);
+  color: #fff;
+  float: right;
+  font-size: 1px;
+  width: 32px;
+  height: 80px;
 }
-.help1 {
-  width: 350px;
-  background-color: #FFFFFF;
-  background-image: url(help_bg.gif);
-  background-repeat: repeat-y;
-  background-position: top right;
-}
-.help2 {
+#help-content {
+  background: #fff url(help_bottom_bg.gif) left bottom no-repeat;
   float: left;
-  width: 286px;
-  padding: 16px;
+  min-height: 100px;
+  padding: 0 10px;
+  width: 248px; /* = 300px - 32px - 2 * 10px */
 }
-#help_panel.open .bottom,
-#help_panel.closed .bottom {
-  clear: both;
-  width: 350px;
-  height: 14px;
-  position: relative;
-  top: -2px;
-  background-color: transparent;
-  background-image: url(help_bottom_bg.gif);
-  background-repeat: no-repeat;
-  background-position: bottom right;
-}
-#help_panel.open a.open-close, #help_panel.closed a.open-close,
-a.open, a.closed {
-  float: left;
-  display: block;
-  width: 28px;
-  height: 120px;
-  text-indent: -9999px;
-  overflow: hidden;
-}
+/* IE6 and lower ignores "height" but treats "height" as min-height: */
+* html #help-content {height: 100px;}
 
-#help_panel.open a.open-close, a.open {
-  background-image: url(help_ttl_open.gif);
-  background-repeat: no-repeat;
-  background-position: top left;
-}
+#help-panel.closed {width: 32px;}
+#help-panel.closed #help-content {display: none;}
 
-#help_panel.closed a.open-close, a.closed {
-	background-image: url(help_ttl_closed.gif);
-	background-repeat: no-repeat;
-	background-position: 0px 0px;
-}
+/*
+Showing the help panel all the time would be in the way,
+and there shouldn't be a "Help" tab that does nothing.
+So it's hidden initially, and then revealed if JavaScript is available. 
+*/
+#help-panel {visibility: hidden;}
 
-/*- The rest of the page is indented to keep clear of the help panel. -*/
+/* The rest of the page keeps clear of the collapsed help panel. */
 #nonhelp {margin: 0 20px 0 38px;}
 
 /*- App home pages and pillar indexes both have a heading and app buttons, -*/
