Fix the font on shipit and add a note on the login page saying that the CDs will only be shipped after Feisty is released

--- a/lib/canonical/launchpad/icing/shipit.css
+++ b/lib/canonical/launchpad/icing/shipit.css
@@ -2,9 +2,9 @@
 
 html {
   position: relative;
-  font-family: "Trebuchet MS", "DejaVu Sans Condensed", "Tahoma", sans-serif;
+  font-family: sans-serif, "Lucida Grande", "Trebuchet MS";
   font-size: 12pt;
-  color: #656565;
+  color: black;
   background-color: #FFFFFF;
 }
 body {margin: 0; padding: 0;}
