Improve shipit-process-requests.py to also process requests with other statuses and to either approve or deny them

--- a/lib/canonical/launchpad/icing/shipit.css
+++ b/lib/canonical/launchpad/icing/shipit.css
@@ -11,6 +11,8 @@ body {margin: 0; padding: 0;}
 
 div.body {padding: 0em 1em;}
 
+.discreet, .lesser {font-size: smaller;}
+
 /* --- Error, warning, and info messages --- */
 
 .error, .warning, .informational {
